Add new homework7

--- a/Homework5/css/style.css
+++ b/Homework5/css/style.css
@@ -174,6 +174,10 @@ select {
 }
 footer {
     width:100%;
-  height: 432px;
+  height: 222px;
   background-image: linear-gradient(183.41deg, #67c3f3 -8.57%, #5a98f2 82.96%);
+}
+.footer-img {
+  padding: 79px 40px 50px 59px;
+color:white
 }
