--- a/Homework7/css/main.css
+++ b/Homework7/css/main.css
@@ -328,14 +328,18 @@ display:none
 }
 
 
-@media only screen and (max-width : 480px) {
+@media only screen and (min-width: 768px) {
+  .img-collection > img{
+    display:none
+    }
+    .section1{
+      display:flex;
+      flex-direction: column;
+      align-content: center;
+    }
+    .section2, .section3, .section4{
+      display: flex;
+      flex-direction: column-reverse;
+    }
 
-nav {
-  border-bottom: 0;
-}
-nav ul {
-  display: none;
-  height:auto;
-}
-
-}
+   }
